# the_c_programming_language

./: .gitignore  README.md
chapter_1/: CMakeLists.txt  README.md
chapter_1/character_count/: CMakeLists.txt
chapter_1/character_count/src/: character_count.c
chapter_1/count/: CMakeLists.txt  README.md
chapter_1/count/src/: count.c
chapter_1/hello_world/: CMakeLists.txt  README.md
chapter_1/temperature/: CMakeLists.txt  README.md
chapter_1/temperature/src/: temp.c
chapter_2/sizes/: CmakeLists.txt
chapter_2/sizes/src/: sizes_of.c
chapter_2/string_len/: CmakeLists.txt
chapter_2/string_len/src/: strting_len.c
